# raytracer

./: .appveyor.yml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  conanfile.txt  sonar-project.properties
src/: CMakeLists.txt  main.cpp
src/camera/: Camera.cpp  Camera.h
src/image/: Color.cpp  Color.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  stb_image_write.h
src/light/: DirectionalLight.cpp  DirectionalLight.h  Light.h  OmniLight.cpp  OmniLight.h
src/logging/: Logger.cpp  Logger.h  StreamableGlm.cpp  StreamableGlm.h
src/materials/: SimpleMaterial.h
src/math/: FloatingComp.cpp  FloatingComp.h  MathUtils.h  Quadratic.cpp  QuadraticSolver.cpp  QuadraticSolver.h  Ray.cpp  Ray.h  RayIntersection.cpp  RayIntersection.h  VectorHelpers.cpp  VectorHelpers.h
src/shading/: PhongShading.cpp  PhongShading.h
src/std_helpers/: optional.h  std_helpers.h
src/traceables/: Traceable.h
src/traceables/shapes/: Sphere.cpp  Sphere.h
src/tracer/: SimpleTracer.cpp  SimpleTracer.h  Tracer.cpp  Tracer.h  TracerOptions.h  TracerUtils.cpp  TracerUtils.h
tests/: CMakeLists.txt
tests/src/math/: ray.cpp
