set(BINARY_NAME "${PROJECT_NAME}")

#Configure paths
set(BINARY_MODULE_PATH  "${PROJECT_SOURCE_DIR}/src")
set(BINARY_SRC_PATH     "${BINARY_MODULE_PATH}")
set(BINARY_INCLUDE_PATH "${BINARY_MODULE_PATH}")

include_directories(${BINARY_INCLUDE_PATH})

file(GLOB_RECURSE BIN_HEADER_FILES "${BINARY_INCLUDE_PATH}/*.h")
file(GLOB_RECURSE BIN_SOURCE_FILES "${BINARY_SRC_PATH}/*.cpp")

add_library(${BINARY_NAME} STATIC ${BIN_SOURCE_FILES} ${BIN_HEADER_FILES})

add_executable(${BINARY_NAME}bin ${BIN_SOURCE_FILES} ${BIN_HEADER_FILES})

set( BINARY_INCLUDE_PATH ${BINARY_INCLUDE_PATH} PARENT_SCOPE)
set( BINARY_NAME ${BINARY_NAME} PARENT_SCOPE)

enable_testing()
